@@ -18,17 +18,27 @@ namespace scene
 	class IVertexBuffer : public virtual IReferenceCounted
 	{
 	public:
+		//! Pointer to first element of vertex data
 		virtual void* getData() =0;
+
 		virtual video::E_VERTEX_TYPE getType() const =0;
 		virtual void setType(video::E_VERTEX_TYPE vertexType) =0;
+
+		//! Number of bytes per element
 		virtual u32 stride() const =0;
+
+		//! Number of elements
 		virtual u32 size() const =0;
+
+		//! Add vertex to end. Note that depending on vertex type this will be one of the types derived from video::S3DVertex.
 		virtual void push_back(const video::S3DVertex &element) =0;
 		virtual video::S3DVertex& operator [](const u32 index) const =0;
 		virtual video::S3DVertex& getLast() =0;
 		virtual void set_used(u32 usedNow) =0;
 		virtual void reallocate(u32 new_size) =0;
 		virtual u32 allocated_size() const =0;
+
+		//! Same as getData() - not sure why we got 2, should probably deprecate (and we don't always have video::S3DVertex*, so just confusing)
 		virtual video::S3DVertex* pointer() =0;
 
 		//! get the current hardware mapping hint
