@@ -172,9 +172,16 @@ namespace scene
 		}
 
 		//! append the vertices and indices to the current buffer
-		virtual void append(const void* const vertices, u32 numVertices, const u16* const indices, u32 numIndices)  IRR_OVERRIDE {}
+		virtual void append(const void* const vertices, u32 numVertices, const u16* const indices, u32 numIndices)  IRR_OVERRIDE 
+		{
+			// can't do that as it doesn't own the vertex memory
+		}
+
 		//! append the meshbuffer to the current buffer
-		virtual void append(const IMeshBuffer* const other) IRR_OVERRIDE {}
+		virtual void append(const IMeshBuffer* const other) IRR_OVERRIDE 
+		{
+			// can't do that as it doesn't own the vertex memory
+		}
 
 		//! get the current hardware mapping hint
 		virtual E_HARDWARE_MAPPING getHardwareMappingHint_Vertex() const IRR_OVERRIDE
@@ -230,6 +237,30 @@ namespace scene
 		virtual EMESH_BUFFER_TYPE getType() const  IRR_OVERRIDE
 		{
 			return EMBT_SHARED;
+		}
+
+		//! Create copy of the meshbuffer
+		virtual IMeshBuffer* createClone(int cloneFlags) const IRR_OVERRIDE
+		{
+			SSharedMeshBuffer * clone = new SSharedMeshBuffer();
+
+			if (cloneFlags & ECF_VERTICES)
+			{
+				clone->Vertices = Vertices;
+				clone->BoundingBox = BoundingBox;
+			}
+
+			if (cloneFlags & ECF_INDICES)
+			{
+				clone->Indices = Indices;
+			}
+
+			clone->Material = Material;
+			clone->MappingHintVertex = MappingHintVertex;
+			clone->MappingHintIndex = MappingHintIndex;
+			clone->PrimitiveType = PrimitiveType;
+
+			return clone;
 		}
 
 		//! Material of this meshBuffer
